# SER334

./: CMakeLists.txt
Module 1/: NguyenCollatz.c  NguyenComputation.c  NguyenDecrypt.c
Module 2/: CompletedScheduler.c
Module 3/: BMPHandler.c  BMPHandler.h  Image.c  Image.h  NguyenImageProcessor.c
Module 5/: Makefile  NguyenLKM.c
Module 6/: BMPHandler.c  BMPHandler.h  NguyenFilters.c
